--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,16 +18,16 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #Directory
 config.upload = F:/SpringBoot/TestModuleSpringBoot_4_5_2022/src/main/resources/images//
 
-##Facebook
-#spring.security.oauth2.client.registration.facebook.client-id=521647912775614
-#spring.security.oauth2.client.registration.facebook.client-secret=8127a660155355335bb7c7b65f3f92d0
-#spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture
-#
-##Google
-#spring.security.oauth2.client.registration.google.client-id=898213089179-nmkcqg96hgbhd70uv2iueruuvp749eo4.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=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
-#spring.security.oauth2.client.registration.google.scope=email,profile
-#
+#Facebook
+spring.security.oauth2.client.registration.facebook.client-id=521647912775614
+spring.security.oauth2.client.registration.facebook.client-secret=8127a660155355335bb7c7b65f3f92d0
+spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture
+
+#Google
+spring.security.oauth2.client.registration.google.client-id=898213089179-nmkcqg96hgbhd70uv2iueruuvp749eo4.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
+
 ##SendMail
 #mail.smtp.host: smtp.gmail.com
 #mail.smtp.port: 587
