--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.security.oauth2.client.registration.google.scope=email,profile
 #mail.smtp.port: 587
 #mail.smtp.username: dang.dev04@gmail.com
 ##dien mk email
-#mail.smtp.password: Anhlapro123
+#mail.smtp.password:
 #mail.smtp.auth: true
 # Spring Datasource, Spring Data...
 # App Properties
